--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="filter-group">
             <label>DATA SOURCE</label><br>
             <div style="font-size: 0.7rem; color: var(--accent-cyan);">GitHub REST API v3</div>
+            <p id="update-time" style="color: #8b949e; font-size: 0.8rem; text-align: center;"></p>
         </div>
     </div>
 
@@ -79,4 +80,5 @@
         </div>
     </div>
 </body>
+
 </html>
